@@ -1,20 +1,27 @@
 package com.ing.ide.main.mainui.components.testdesign.testcase;
 
-import com.ing.ide.main.playwrightrecording.RecordedStepsImportDialog;
+import static com.ing.datalib.component.TestStep.HEADERS.Description;
+
+import com.ing.datalib.component.ReusableRef;
 import com.ing.datalib.component.Scenario;
 import com.ing.datalib.component.TestCase;
 import com.ing.datalib.component.TestStep;
 import com.ing.datalib.component.TestStep.HEADERS;
-import static com.ing.datalib.component.TestStep.HEADERS.Description;
 import com.ing.datalib.component.utils.SaveListener;
+import com.ing.datalib.or.web.WebORPage;
 import com.ing.engine.constants.SystemDefaults;
+import com.ing.engine.core.LiveRecordingHook;
+import com.ing.engine.core.LiveRecordingService;
 import com.ing.engine.core.RunManager;
 import com.ing.engine.support.methodInf.MethodInfoManager;
 import com.ing.ide.main.mainui.AppMainFrame;
 import com.ing.ide.main.mainui.EngineConfig;
+import com.ing.ide.main.mainui.components.testdesign.ReusableComponentDialog;
 import com.ing.ide.main.mainui.components.testdesign.TestDesign;
-import com.ing.ide.main.playwrightrecording.PlaywrightSpinner;
-import com.ing.ide.main.playwrightrecording.ClipboardMonitor;
+import com.ing.ide.main.playwrightrecording.InspectorWindowController;
+import com.ing.ide.main.playwrightrecording.LiveRecordingParser;
+import com.ing.ide.main.playwrightrecording.PlaywrightRecordingParser;
+import com.ing.ide.main.playwrightrecording.RecordingTargetDialog;
 import com.ing.ide.main.utils.AppIcon;
 import com.ing.ide.main.utils.ConsolePanel;
 import com.ing.ide.main.utils.MenuScroller;
@@ -22,8 +29,8 @@ import com.ing.ide.main.utils.Utils;
 import com.ing.ide.main.utils.keys.Keystroke;
 import com.ing.ide.main.utils.table.TableColumnManager;
 import com.ing.ide.main.utils.table.XTable;
-import com.ing.ide.util.Notification;
 import com.ing.ide.util.Canvas;
+import com.ing.ide.util.Notification;
 import com.ing.ide.util.Notification;
 import com.ing.ide.util.WindowMover;
 import java.awt.BorderLayout;
@@ -31,9 +38,12 @@ import java.awt.Component;
 import java.awt.Cursor;
 import java.awt.GraphicsDevice;
 import java.awt.GraphicsEnvironment;
+import java.awt.KeyEventPostProcessor;
+import java.awt.KeyboardFocusManager;
 import java.awt.Rectangle;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.BufferedReader;
@@ -45,18 +55,16 @@ import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.util.Arrays;
-import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import javax.swing.AbstractAction;
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
+import javax.swing.JComponent;
 import javax.swing.JDialog;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
@@ -92,6 +100,8 @@ import javax.swing.table.TableCellRenderer;
  * </p>
  */
 public class TestCaseComponent extends JPanel implements ActionListener {
+    private static final String PLAYWRIGHT_INSTALL_HINT =
+        "mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args=\"install\"";
 
     private final TestDesign testDesign;
 
@@ -118,14 +128,32 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     TableColumnManager tableColumnManager;
 
     private final TCHistory testCaseHistory;
-    
+
     private final AppMainFrame sMainFrame;
-    
-    private ClipboardMonitor monitor;
-    
+
     private CompletableFuture<Void> launchPlaywrightTask;
-    
+
+    private volatile Process activePlaywrightProcess;
+
+    private volatile Thread liveRecordingWatcherThread;
+
+    private volatile boolean recorderReadySignaled;
+
+    private volatile boolean liveRecordingFinalized;
+
+    private volatile boolean stopRequested;
+
+    private volatile File liveRecordingOutputFile;
+
+    private volatile LiveRecordingParser liveRecordingParser;
+
+    private volatile TestCase liveRecordingTarget;
+
+    private volatile String liveRecordingPageName;
+
     public static long INSTANCE_START_TIME;
+
+    private boolean globalShortcutsRegistered = false;
 
     public TestCaseComponent(TestDesign testDesign, AppMainFrame sMainFrame) {
         this.testDesign = testDesign;
@@ -140,6 +168,7 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         testCaseHistory = new TCHistory();
         validator = new TestCaseValidator(testCaseTable);
         init();
+        LiveRecordingService.setHook(new RecordFromHereHook());
     }
 
     private void init() {
@@ -149,6 +178,117 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         testCaseTable.setComponentPopupMenu(popupMenu);
         initTableListeners();
         initRunner();
+        initTestCaseAccelerators();
+    }
+
+    /**
+     * Registers keyboard shortcuts for the TestCase panel.
+     * <p>
+     * Global shortcuts (Record, Run, Debug) use a keyboard focus manager key event
+     * post-processor that fires regardless of focused child component.
+     * Focus-dependent shortcuts use WHEN_ANCESTOR_OF_FOCUSED_COMPONENT so they only
+     * fire when focus is inside this panel.
+     */
+    private void initTestCaseAccelerators() {
+        registerGlobalShortcuts();
+
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.SAVE, "Save");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.F5, "Reload");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.UP, "MoveUp");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.DOWN, "MoveDown");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.OPEN, "Open");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.FIND, "Search");
+
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.COMMENT, "Comment");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.BREAKPOINT, "BreakPoint");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.INSERT_ROW, "Insert");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.ADD_ROW, "Add");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put(Keystroke.ADD_ROWX, "Add");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.REMOVE_ROW, "Delete");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.REMOVE_ROWX, "Delete");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.REPLICATE_ROW, "Replicate");
+        getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
+            .put(Keystroke.COPY_ABOVE, "Copy Above");
+    }
+
+    /**
+     * Registers global shortcuts for Record, Run, and Debug.
+     * These are intentionally not table-bound so they work even when focus is in
+     * toolbar/search/other child components inside the main frame.
+     */
+    private void registerGlobalShortcuts() {
+        if (globalShortcutsRegistered) {
+            return;
+        }
+        globalShortcutsRegistered = true;
+
+        KeyEventPostProcessor processor = e -> {
+            if (e.getID() != KeyEvent.KEY_PRESSED) {
+                return false;
+            }
+            if (!isMainFrameFocused()) {
+                return false;
+            }
+            if (!sMainFrame.isTestDesign()) {
+                return false;
+            }
+
+            int code = e.getKeyCode();
+            int mods = e.getModifiersEx();
+
+            boolean isCtrlF6 = code == KeyEvent.VK_F6 && (mods & KeyEvent.CTRL_DOWN_MASK) != 0;
+            boolean isCmdF6 = code == KeyEvent.VK_F6 && (mods & KeyEvent.META_DOWN_MASK) != 0;
+
+            if (isCtrlF6 || isCmdF6) {
+                debug();
+                return true;
+            }
+
+            if (code == KeyEvent.VK_F6 && mods == 0) {
+                run();
+                return true;
+            }
+
+            boolean isCtrlAltR =
+                code == KeyEvent.VK_R &&
+                (mods & KeyEvent.CTRL_DOWN_MASK) != 0 &&
+                (mods & KeyEvent.ALT_DOWN_MASK) != 0;
+
+            boolean isCmdAltR =
+                code == KeyEvent.VK_R &&
+                (mods & KeyEvent.META_DOWN_MASK) != 0 &&
+                (mods & KeyEvent.ALT_DOWN_MASK) != 0;
+
+            if (isCtrlAltR || isCmdAltR) {
+                try {
+                    record();
+                } catch (IOException ex) {
+                    Logger.getLogger(TestCaseComponent.class.getName()).log(Level.SEVERE, null, ex);
+                }
+                return true;
+            }
+
+            return false;
+        };
+
+        KeyboardFocusManager.getCurrentKeyboardFocusManager().addKeyEventPostProcessor(processor);
+    }
+
+    /** @return true if the main frame or one of its children currently has focus */
+    private boolean isMainFrameFocused() {
+        KeyboardFocusManager kfm = KeyboardFocusManager.getCurrentKeyboardFocusManager();
+        java.awt.Component focusOwner = kfm.getFocusOwner();
+
+        return (
+            kfm.getFocusedWindow() == sMainFrame ||
+            (focusOwner != null && SwingUtilities.isDescendingFrom(focusOwner, sMainFrame))
+        );
     }
 
     public void loadTableModelForSelection(Object obj) {
@@ -158,7 +298,7 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             if (currentTestCase != null && !currentTestCase.isSaved()) {
                 currentTestCase.save();
             }
-            
+
             testCaseHistory.log();
             TestCase tc = (TestCase) obj;
             tc.setSaveListener(saveListener);
@@ -167,15 +307,17 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             validator.initValidations();
             changeSave(tc.isSaved());
             refreshTitle();
-            
+
             // Check if migration occurred and show notification
             int migratedCount = tc.getMigratedReferencesCount();
             if (migratedCount > 0) {
                 Notification.show(
-                    String.format("Migrated %d object reference%s to explicit scope prefix in '%s'",
+                    String.format(
+                        "Migrated %d object reference%s to explicit scope prefix in '%s'",
                         migratedCount,
                         migratedCount > 1 ? "es" : "",
-                        tc.getName())
+                        tc.getName()
+                    )
                 );
             }
         }
@@ -196,166 +338,224 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         if (tcText.length() > 20) {
             tcText = tcText.substring(0, 20) + "...";
         }
-//        String toolTip
-//                = getCurrentTestCase().getScenario().getName()
-//                + " - "
-//                + getCurrentTestCase().getName();
+        //        String toolTip
+        //                = getCurrentTestCase().getScenario().getName()
+        //                + " - "
+        //                + getCurrentTestCase().getName();
         toolBar.setPlaceHolderText(scText + " - " + tcText, null);
     }
 
     public void load() {
-        tcAutoSuggest = new TestCaseAutoSuggest(testDesign.getProject(), testCaseTable);
+        tcAutoSuggest = new TestCaseAutoSuggest(testDesign.getProject(), testCaseTable, testDesign);
         testCaseHistory.clear();
         loadBrowsers();
     }
 
     public void loadBrowsers() {
-        toolBar.loadBrowsers(testDesign.getProject().getProjectSettings().getEmulators().getEmulatorNames());
+        java.util.List<String> names = new java.util.ArrayList<>(
+            testDesign.getProject().getProjectSettings().getEmulators().getEmulatorNames()
+        );
+        for (String d : testDesign
+            .getProject()
+            .getProjectSettings()
+            .getDevices()
+            .getDeviceNames()) {
+            if (!names.contains(d)) names.add(d);
+        }
+        toolBar.loadBrowsers(names);
     }
 
     private void initTableListeners() {
-        testCaseTable.setActionFor("Comment", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                toggleComment();
-            }
-        });
+        testCaseTable.setActionFor(
+            "Comment",
+            new AbstractAction() {
 
-        testCaseTable.setActionFor("BreakPoint", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                toggleBreakPoint();
-            }
-        });
-
-        testCaseTable.setActionFor("Insert", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                insertRow();
-            }
-        });
-        testCaseTable.setActionFor("Add", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                addRow();
-            }
-        });
-        testCaseTable.setActionFor("Delete", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                deleteSelectedRows();
-            }
-        });
-
-        testCaseTable.setActionFor("Clear", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent ae) {
-                clearValues();
-            }
-        });
-
-        testCaseTable.setActionFor("Replicate", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                replicateRow();
-            }
-        });
-        testCaseTable.setActionFor("Save", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                save();
-            }
-        });
-        testCaseTable.setActionFor("Reload", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                reload();
-            }
-        });
-        testCaseTable.setActionFor("Open", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                openWithSystemEditor();
-            }
-
-        });
-        testCaseTable.setActionFor("Search", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                toolBar.focusSearch();
-            }
-        });
-
-        testCaseTable.setActionFor("Copy Above", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                copyAbove();
-            }
-        });
-
-        testCaseTable.setActionFor("MoveUp", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                moveRowUp();
-            }
-        });
-        testCaseTable.setActionFor("MoveDown", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                moveRowDown();
-            }
-        });
-
-        testCaseTable.setKeyStrokeFor("RunTestCase", Keystroke.F6);
-        testCaseTable.setActionFor("RunTestCase", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                run();
-            }
-        });
-        testCaseTable.setKeyStrokeFor("DebugTestCase", Keystroke.CTRLF6);
-        testCaseTable.setActionFor("DebugTestCase", new AbstractAction() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                debug();
-            }
-        });
-
-        saveListener = new SaveListener() {
-            @Override
-            public void onSave(Boolean bln) {
-                changeSave(bln);
-            }
-        };
-
-        testCaseTable.setTransferHandler(new TestCaseTableDnD());
-        testCaseTable.addMouseListener(new MouseAdapter() {
-
-            @Override
-            public void mouseClicked(MouseEvent me) {
-
-                if (SwingUtilities.isLeftMouseButton(me) && me.isAltDown()) {
-                    goToSelectedReusable();
-                } else if (SwingUtilities.isLeftMouseButton(me) && me.isShiftDown()) {
-                    goToObject();
-                } else if (SwingUtilities.isLeftMouseButton(me)) {
-                    addLastRow();
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    toggleComment();
                 }
             }
+        );
 
-        });
+        testCaseTable.setActionFor(
+            "BreakPoint",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    toggleBreakPoint();
+                }
+            }
+        );
+
+        testCaseTable.setActionFor(
+            "Insert",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    insertRow();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Add",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    addRow();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Delete",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    deleteSelectedRows();
+                }
+            }
+        );
+
+        testCaseTable.setActionFor(
+            "Clear",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent ae) {
+                    clearValues();
+                }
+            }
+        );
+
+        testCaseTable.setActionFor(
+            "Replicate",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    replicateRow();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Save",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    save();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Reload",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    reload();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Open",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    openWithSystemEditor();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "Search",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    toolBar.focusSearch();
+                }
+            }
+        );
+
+        testCaseTable.setActionFor(
+            "Copy Above",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    copyAbove();
+                }
+            }
+        );
+
+        testCaseTable.setActionFor(
+            "MoveUp",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    moveRowUp();
+                }
+            }
+        );
+        testCaseTable.setActionFor(
+            "MoveDown",
+            new AbstractAction() {
+
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    moveRowDown();
+                }
+            }
+        );
+
+        saveListener =
+            new SaveListener() {
+
+                @Override
+                public void onSave(Boolean bln) {
+                    changeSave(bln);
+                    refreshTreeValidation();
+                }
+            };
+
+        testCaseTable.setTransferHandler(new TestCaseTableDnD());
+        testCaseTable.addMouseListener(
+            new MouseAdapter() {
+
+                @Override
+                public void mouseClicked(MouseEvent me) {
+                    if (SwingUtilities.isLeftMouseButton(me) && me.isAltDown()) {
+                        goToSelectedReusable();
+                    } else if (SwingUtilities.isLeftMouseButton(me) && me.isShiftDown()) {
+                        goToObject();
+                    } else if (SwingUtilities.isLeftMouseButton(me)) {
+                        addLastRow();
+                    }
+                }
+            }
+        );
     }
 
     private void initRunner() {
-        runner = new Thread(() -> {
-            toolBar.setConsoleVisible(true);
-            toolBar.stopMode();
-            consoleDialog.start();
-            RunManager.getGlobalSettings().setFor(getCurrentTestCase(), toolBar.getSelectedBrowser());
-            EngineConfig.runProject(testDesign.getProject());
-            debugDialog.setVisible(false);
-            toolBar.startMode();
-        });
+        runner =
+            new Thread(
+                () -> {
+                    toolBar.setConsoleVisible(true);
+                    toolBar.stopMode();
+                    consoleDialog.start();
+                    RunManager
+                        .getGlobalSettings()
+                        .setFor(getCurrentTestCase(), toolBar.getSelectedBrowser());
+                    EngineConfig.runProject(testDesign.getProject());
+                    debugDialog.setVisible(false);
+                    toolBar.startMode();
+                }
+            );
     }
 
     private void changeSave(Boolean bln) {
@@ -366,15 +566,17 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     @Override
     public void actionPerformed(ActionEvent ae) {
         switch (ae.getActionCommand()) {
-            case "Record": {
-                try {
-                    record();
-                } catch (IOException ex) {
-                    Logger.getLogger(TestCaseComponent.class.getName()).log(Level.SEVERE, null, ex);
+            case "Record":
+                {
+                    try {
+                        record();
+                    } catch (IOException ex) {
+                        Logger
+                            .getLogger(TestCaseComponent.class.getName())
+                            .log(Level.SEVERE, null, ex);
+                    }
                 }
-            }
-            break;
-
+                break;
             case "Open with System Editor":
                 openWithSystemEditor();
                 break;
@@ -446,6 +648,12 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             case "Parameterize":
                 parameterizeSelectedSteps();
                 break;
+            case "Hard Assertion":
+                setHardAssertion(true);
+                break;
+            case "Soft Assertion":
+                setHardAssertion(false);
+                break;
             case "Up One Level":
                 loadTableModelForSelection(testCaseHistory.visit());
                 break;
@@ -462,41 +670,200 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     }
 
     public void record() throws IOException {
-        String projectLocation = sMainFrame.getProject().getLocation();
-        INSTANCE_START_TIME = System.currentTimeMillis();
-        if (launchPlaywrightTask == null || launchPlaywrightTask.isDone()) {
-            PlaywrightSpinner playwrightSpinnerGUI = new PlaywrightSpinner();
+        if (toolBar.isRecording()) {
+            stopPlaywrightRecording();
+            return;
+        }
 
-            launchPlaywrightTask = CompletableFuture.runAsync(() -> {
-                try {
-                    launchPlaywright(playwrightSpinnerGUI);
-                } catch (IOException ex) {
-                    Logger.getLogger(TestCaseComponent.class.getName()).log(Level.SEVERE, "Error launching Playwright", ex);
-                }
-            });
-
-            CompletableFuture<Void> playwrightLoading = CompletableFuture.runAsync(() -> {
-                try {
-                    playwrightLoading(playwrightSpinnerGUI);
-                } catch (Exception ex) {
-                    Logger.getLogger(TestCaseComponent.class.getName()).log(Level.WARNING, "Error in playwright loading UI", ex);
-                }
-            });
-            CompletableFuture.allOf(launchPlaywrightTask, playwrightLoading)
-                .whenComplete((result, throwable) -> {
-                    if (throwable != null) {
-                        Logger.getLogger(TestCaseComponent.class.getName()).log(Level.SEVERE, "Playwright tasks failed", throwable);
-                    }
-                    SwingUtilities.invokeLater(() -> toolBar.enableRecordButton());
-                });
-
-        } else {
-            System.out.println("Playwright is already running. Skipping duplicate launch.");
+        if (launchPlaywrightTask != null && !launchPlaywrightTask.isDone()) {
+            logPlaywright("Playwright recorder is already running.");
             SwingUtilities.invokeLater(() -> toolBar.enableRecordButton());
+            return;
+        }
+
+        RecordingTargetDialog.Selection selection = RecordingTargetDialog.showDialog(
+            this,
+            testDesign.getProject(),
+            getCurrentTestCase()
+        );
+        if (selection == null) {
+            SwingUtilities.invokeLater(() -> toolBar.enableRecordButton());
+            return;
+        }
+
+        TestCase target = resolveRecordingTarget(selection);
+        if (target == null) {
+            JOptionPane.showMessageDialog(
+                this,
+                "Unable to resolve recording target.",
+                "Playwright Recorder",
+                JOptionPane.WARNING_MESSAGE
+            );
+            SwingUtilities.invokeLater(() -> toolBar.enableRecordButton());
+            return;
+        }
+
+        loadTableModelForSelection(target);
+        liveRecordingTarget = target;
+        liveRecordingFinalized = false;
+        stopRequested = false;
+        recorderReadySignaled = false;
+        INSTANCE_START_TIME = System.currentTimeMillis();
+
+        int firstInsertIndex = firstEmptyRowIndex(target);
+        PlaywrightRecordingParser baseParser = new PlaywrightRecordingParser(sMainFrame);
+        WebORPage objectPage = baseParser.createLiveRecordingPage(target.getName());
+        liveRecordingPageName = baseParser.getLiveRecordingPageName();
+        String reference = "[Project] " + liveRecordingPageName;
+        liveRecordingParser =
+            new LiveRecordingParser(baseParser, target, firstInsertIndex, reference, objectPage);
+
+        liveRecordingOutputFile = prepareLiveRecordingOutputFile();
+
+        toolBar.setConsoleVisible(true);
+        consoleDialog.clear();
+        consoleDialog.showConsole();
+        logPlaywright("🎬 Playwright Recording is being initiated...");
+        logPlaywright(
+            "============================== Playwright Log Started =============================="
+        );
+
+        startLiveRecordingWatcher();
+
+        launchPlaywrightTask =
+            CompletableFuture.runAsync(
+                () -> {
+                    try {
+                        launchPlaywright(liveRecordingOutputFile);
+                    } catch (IOException ex) {
+                        logPlaywrightError("Error launching Playwright: " + ex.getMessage());
+                        Logger
+                            .getLogger(TestCaseComponent.class.getName())
+                            .log(Level.SEVERE, "Error launching Playwright", ex);
+                    } finally {
+                        finalizeLiveRecording();
+                    }
+                }
+            );
+    }
+
+    /**
+     * Live recording hook used by the Engine's {@code RecordFromHere} action. When a running test
+     * case reaches a {@code RecordFromHere} step, the Engine enables the Playwright recorder on the
+     * live browser context and notifies this hook so the recorded steps are appended into the
+     * editor in real time (highlighted green) from the current step onwards.
+     */
+    private class RecordFromHereHook implements LiveRecordingHook {
+
+        @Override
+        public String onRecordingStarted(TestCase engineTestCase, int insertAfterStepIndex) {
+            final TestCase target = resolveHookTarget(engineTestCase);
+            if (target == null) {
+                Logger
+                    .getLogger(TestCaseComponent.class.getName())
+                    .log(Level.WARNING, "RecordFromHere: unable to resolve editable test case.");
+                return null;
+            }
+
+            final int firstInsertIndex = Math.max(insertAfterStepIndex + 1, 0);
+            final java.util.concurrent.atomic.AtomicReference<File> fileRef = new java.util.concurrent.atomic.AtomicReference<>();
+
+            Runnable setup = () -> {
+                try {
+                    loadTableModelForSelection(target);
+                    liveRecordingTarget = target;
+                    liveRecordingFinalized = false;
+                    stopRequested = false;
+                    recorderReadySignaled = false;
+                    INSTANCE_START_TIME = System.currentTimeMillis();
+
+                    PlaywrightRecordingParser baseParser = new PlaywrightRecordingParser(
+                        sMainFrame
+                    );
+                    WebORPage objectPage = baseParser.createLiveRecordingPage(target.getName());
+                    liveRecordingPageName = baseParser.getLiveRecordingPageName();
+                    String reference = "[Project] " + liveRecordingPageName;
+                    liveRecordingParser =
+                        new LiveRecordingParser(
+                            baseParser,
+                            target,
+                            firstInsertIndex,
+                            reference,
+                            objectPage
+                        );
+
+                    liveRecordingOutputFile = prepareLiveRecordingOutputFile();
+
+                    toolBar.setConsoleVisible(true);
+                    consoleDialog.clear();
+                    consoleDialog.showConsole();
+                    logPlaywright("🎬 Recording from current step...");
+                    startLiveRecordingWatcher();
+                    fileRef.set(liveRecordingOutputFile);
+                } catch (Exception ex) {
+                    Logger
+                        .getLogger(TestCaseComponent.class.getName())
+                        .log(Level.SEVERE, "Unable to start live recording for RecordFromHere", ex);
+                }
+            };
+
+            try {
+                if (SwingUtilities.isEventDispatchThread()) {
+                    setup.run();
+                } else {
+                    SwingUtilities.invokeAndWait(setup);
+                }
+            } catch (Exception ex) {
+                Logger
+                    .getLogger(TestCaseComponent.class.getName())
+                    .log(Level.WARNING, "RecordFromHere setup failed", ex);
+                return null;
+            }
+
+            File file = fileRef.get();
+            return file == null ? null : file.getAbsolutePath();
+        }
+
+        @Override
+        public void onRecordingReady() {
+            if (!recorderReadySignaled) {
+                onRecorderReady();
+            }
+        }
+
+        @Override
+        public void onRecordingStopped() {
+            finalizeLiveRecording();
         }
     }
 
-    public Process startPlaywrightProcess(String processName, PlaywrightSpinner playwrightSpinnerGUI) {
+    /**
+     * Maps the Engine's (copied) running test case back to the editable project test case so
+     * recorded steps and saves apply to the persistent model shown in the editor.
+     */
+    private TestCase resolveHookTarget(TestCase engineTestCase) {
+        if (engineTestCase == null) {
+            return null;
+        }
+
+        Scenario engineScenario = engineTestCase.getScenario();
+        String scenarioName = engineScenario != null ? engineScenario.getName() : null;
+        String testCaseName = engineTestCase.getName();
+        if (scenarioName == null || testCaseName == null) {
+            return null;
+        }
+
+        boolean reusable = engineScenario.isReusableScenario();
+        Scenario scenario = reusable
+            ? testDesign.getProject().getReusableScenarioByName(scenarioName)
+            : testDesign.getProject().getScenarioByName(scenarioName);
+        if (scenario == null) {
+            return null;
+        }
+        return scenario.getTestCaseByName(testCaseName);
+    }
+
+    public Process startPlaywrightProcess(String processArgs) {
         try {
             String osName = System.getProperty("os.name").toLowerCase();
             String classpath;
@@ -508,9 +875,14 @@ public class TestCaseComponent extends JPanel implements ActionListener {
                 if (!printDeps.exists()) {
                     new File(printDepsDir).mkdirs();
 
-                    try (InputStream in = getClass().getResourceAsStream("/Engine/winldd-1007/PrintDeps.exe")) {
+                    try (
+                        InputStream in = getClass()
+                            .getResourceAsStream("/Engine/winldd-1007/PrintDeps.exe")
+                    ) {
                         if (in == null) {
-                            throw new FileNotFoundException("PrintDeps.exe not found in resources!");
+                            throw new FileNotFoundException(
+                                "PrintDeps.exe not found in resources!"
+                            );
                         }
                         Files.copy(in, Path.of(printDepsPath), StandardCopyOption.REPLACE_EXISTING);
                     }
@@ -523,158 +895,444 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             String javaCommand = String.format(
                 "java -cp \"%s\" com.microsoft.playwright.CLI %s",
                 classpath,
-                processName
+                processArgs
             );
 
             String[] command = osName.contains("windows")
-                ? new String[]{"cmd", "/c", javaCommand}
-                : new String[]{"bash", "-l", "-c", javaCommand};
+                ? new String[] { "cmd", "/c", javaCommand }
+                : new String[] { "bash", "-l", "-c", javaCommand };
 
-            Process process = Runtime.getRuntime().exec(command);
-            return process;
-
+            return new ProcessBuilder(command).redirectErrorStream(true).start();
         } catch (Exception ex) {
-            System.out.println("Error starting Playwright process: " + ex.getMessage());
-            //playwrightSpinnerGUI.appendLog(ex.getMessage());
+            logPlaywrightError("Error starting Playwright process: " + ex.getMessage());
         }
 
         return null;
     }
 
-//    public void initialization(PlaywrightSpinner playwrightSpinnerGUI){
-//        try{
-//            String[] command = new String[0];
-//            String osName = System.getProperty("os.name").toLowerCase();
-//            if (osName.contains("windows")) {
-//                // Windows command
-//                
-//                command = new String[]{"cmd", "/c", "mvn initialize -f engine/pom.xml"};
-//            } else if (osName.contains("mac")) {
-//                // Mac command
-//                command = new String[]{"bash", "-l", "-c", "mvn initialize -f engine/pom.xml"};
-//            } 
-//           Runtime.getRuntime().exec(command);
-//       }catch (Exception ex){
-//         System.out.println(ex.getMessage());
-//         //playwrightSpinnerGUI.appendLog(ex.getMessage());
-//       }
-//    }
-    
-    /**
-     * Launches the Playwright codegen process and handles the recording workflow.
-     * <p>
-     * Displays an informational dialog, starts clipboard monitoring, and executes
-     * the Playwright codegen process. If required, triggers Playwright installation.
-     * After recording, attempts to import the latest recorded steps and notifies the user
-     * if no recording is available.
-     * </p>
-     *
-     * @param playwrightSpinnerGUI the spinner GUI component for Playwright status updates
-     * @throws IOException if an I/O error occurs during process execution
-     */
-    public void launchPlaywright(PlaywrightSpinner playwrightSpinnerGUI) throws IOException {
-        System.out.println("============================== Playwright Log Started ==============================");
-        //playwrightSpinnerGUI.appendLog("============================== Playwright Log Started ==============================");
-        //initialization(playwrightSpinnerGUI);
-        JDialog topDialog = new JDialog();
-        topDialog.setAlwaysOnTop(true);
-        JOptionPane.showMessageDialog(
-            topDialog,
-            "To import the recorded steps, make sure to copy the script from the Playwright Inspector before closing the Recorder.",
-            "Info",
-            JOptionPane.PLAIN_MESSAGE
+    //    public void initialization(PlaywrightSpinner playwrightSpinnerGUI){
+    //        try{
+    //            String[] command = new String[0];
+    //            String osName = System.getProperty("os.name").toLowerCase();
+    //            if (osName.contains("windows")) {
+    //                // Windows command
+    //
+    //                command = new String[]{"cmd", "/c", "mvn initialize -f engine/pom.xml"};
+    //            } else if (osName.contains("mac")) {
+    //                // Mac command
+    //                command = new String[]{"bash", "-l", "-c", "mvn initialize -f engine/pom.xml"};
+    //            }
+    //           Runtime.getRuntime().exec(command);
+    //       }catch (Exception ex){
+    //         System.out.println(ex.getMessage());
+    //         //playwrightSpinnerGUI.appendLog(ex.getMessage());
+    //       }
+    //    }
+
+    public void launchPlaywright(File outputFile) throws IOException {
+        String escapedPath = outputFile
+            .getAbsolutePath()
+            .replace("\\", "\\\\")
+            .replace("\"", "\\\"");
+        String processArgs = "codegen --target java --output \"" + escapedPath + "\"";
+        runPlaywrightProcess(processArgs);
+        logPlaywright(
+            "============================== Playwright Log Ended =============================="
         );
-        monitor = new ClipboardMonitor(sMainFrame);
-        monitor.startMonitoring();
-        Process launchRecorder = startPlaywrightProcess("codegen", playwrightSpinnerGUI);
-        BufferedReader stdInput = new BufferedReader(new InputStreamReader(launchRecorder.getInputStream()));
-        BufferedReader stdError = new BufferedReader(new InputStreamReader(launchRecorder.getErrorStream()));
-        String s = null;
-        while ((s = stdInput.readLine()) != null) {
-            System.out.println(s);
-            //playwrightSpinnerGUI.appendLog(s);
-        }
-        while ((s = stdError.readLine()) != null) {
-            System.out.println(s);
-            if (s.contains("mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args=\"install\"")) {
-                System.out.println("");
-                //System.out.println("--> mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args=\"install\" --> Got executed");
-                //playwrightSpinnerGUI.appendLog("--> mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args=\"install\" --> Got executed");
-                Process playwrightInstall = startPlaywrightProcess("install", playwrightSpinnerGUI);
-                BufferedReader stdInput1 = new BufferedReader(new InputStreamReader(playwrightInstall.getInputStream()));
-                BufferedReader stdError1 = new BufferedReader(new InputStreamReader(playwrightInstall.getErrorStream()));
-                String s1 = null;
-                while ((s1 = stdInput1.readLine()) != null) {
-                    System.out.println(s1);
-                    //playwrightSpinnerGUI.appendLog(s1);
-                }
-                while ((s1 = stdError1.readLine()) != null) {
-                    System.out.println(s1);
-                    //playwrightSpinnerGUI.appendLog(s1);
-                }
-                try {
-                    playwrightInstall.waitFor();
-                } catch (InterruptedException ex) {
-                    Logger.getLogger(TestCaseComponent.class.getName()).log(Level.SEVERE, null, ex);
-                    //playwrightSpinnerGUI.appendLog(ex.getMessage());
-                }
-                startPlaywrightProcess("codegen", playwrightSpinnerGUI);
-                break;
-            }
-        }
-        System.out.println("============================== Playwright Log Ended ==============================");
-        //playwrightSpinnerGUI.appendLog("============================== Playwright Log Ended ==============================");
-
-
-        new Thread(() -> {
-            try {
-                String projectLocation = sMainFrame.getProject().getLocation();
-                launchRecorder.waitFor();
-
-                File recordingDir = new File(projectLocation + File.separator + "Recording");
-                File[] recordingFiles = recordingDir.listFiles((dir, name) -> name.startsWith("recording_") && name.endsWith(".txt"));
-
-                File latestFile = null;
-                if (recordingFiles != null && recordingFiles.length > 0) {
-                    List<File> filteredFiles = Arrays.stream(recordingFiles)
-                            .filter(file -> file.lastModified() >= INSTANCE_START_TIME)
-                            .sorted(Comparator.comparingLong(File::lastModified).reversed())
-                            .collect(Collectors.toList());
-
-                    if (!filteredFiles.isEmpty()) {
-                        latestFile = filteredFiles.get(0);
-                    }
-                }
-
-                final File recordedFile = latestFile;
-
-                SwingUtilities.invokeLater(() -> {
-                    if (recordedFile != null && recordedFile.exists()) {
-                        RecordedStepsImportDialog window = new RecordedStepsImportDialog(sMainFrame);
-                        window.setLocationRelativeTo(null);
-                        window.setVisible(true);
-                    } else {
-                        JOptionPane.showMessageDialog(
-                            null,
-                            "You have closed the Playwright Recorder without copying the recorded steps. No recording has been saved for import.",
-                            "Playwright Recorder",
-                            JOptionPane.WARNING_MESSAGE
-                        );
-                    }
-                    monitor.stopMonitoring();
-                });
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-        }).start();
-
     }
 
-    public void playwrightLoading(PlaywrightSpinner playwrightSpinnerGUI) {
+    private Process runPlaywrightProcess(String processArgs) throws IOException {
+        Process process = startPlaywrightProcess(processArgs);
+        if (process == null) {
+            return null;
+        }
 
-        playwrightSpinnerGUI.setAlwaysOnTop(true);
-        playwrightSpinnerGUI.setVisible(true);
+        activePlaywrightProcess = process;
 
+        boolean codegenCommand = processArgs.trim().startsWith("codegen");
+
+        try (
+            BufferedReader processOutput = new BufferedReader(
+                new InputStreamReader(process.getInputStream())
+            )
+        ) {
+            String line;
+            while ((line = processOutput.readLine()) != null) {
+                logPlaywright(line);
+                if (codegenCommand && !recorderReadySignaled) {
+                    onRecorderReady();
+                }
+                if (codegenCommand && line.contains(PLAYWRIGHT_INSTALL_HINT)) {
+                    waitForProcess(process, "Playwright codegen");
+                    logPlaywright("Playwright browser binaries are missing. Starting install...");
+                    Process installProcess = runPlaywrightProcess("install");
+                    waitForProcess(installProcess, "Playwright install");
+                    logPlaywright("Playwright install completed. Restarting recorder...");
+                    return runPlaywrightProcess(processArgs);
+                }
+            }
+        }
+
+        return process;
+    }
+
+    private void waitForProcess(Process process, String processName) {
+        if (process == null) {
+            return;
+        }
+
+        try {
+            process.waitFor();
+        } catch (InterruptedException ex) {
+            Thread.currentThread().interrupt();
+            logPlaywrightError(processName + " wait interrupted: " + ex.getMessage());
+        }
+    }
+
+    private void logPlaywright(String message) {
+        System.out.println(message);
+        consoleDialog.appendLine(message);
+    }
+
+    private void logPlaywrightError(String message) {
+        System.err.println(message);
+        consoleDialog.appendErrorLine(message);
+    }
+
+    private void onRecorderReady() {
+        recorderReadySignaled = true;
+        SwingUtilities.invokeLater(
+            () -> {
+                consoleDialog.setVisible(false);
+                toolBar.setRecordingState(true);
+                toolBar.enableRecordButton();
+            }
+        );
+        CompletableFuture.runAsync(() -> InspectorWindowController.minimizeInspectorBestEffort());
+    }
+
+    private void stopPlaywrightRecording() {
+        stopRequested = true;
+        Process process = activePlaywrightProcess;
+        if (process != null && process.isAlive()) {
+            destroyProcessTree(process);
+        }
+        finalizeLiveRecording();
+    }
+
+    /**
+     * Forcibly terminates the Playwright process and all of its descendants. The codegen CLI
+     * spawns the "Google Chrome for Testing" browser as a child process, so destroying only the
+     * parent wrapper would leave that browser window open. Collecting descendants before
+     * destroying the parent ensures the browser window is closed too.
+     */
+    private void destroyProcessTree(Process process) {
+        if (process == null) {
+            return;
+        }
+        try {
+            List<ProcessHandle> descendants = process
+                .descendants()
+                .collect(java.util.stream.Collectors.toList());
+            process.destroyForcibly();
+            for (ProcessHandle handle : descendants) {
+                handle.destroyForcibly();
+            }
+        } catch (Exception ex) {
+            Logger
+                .getLogger(TestCaseComponent.class.getName())
+                .log(Level.WARNING, "Unable to terminate Playwright browser process tree", ex);
+        }
+    }
+
+    private void finalizeLiveRecording() {
+        synchronized (this) {
+            if (liveRecordingFinalized) {
+                return;
+            }
+            liveRecordingFinalized = true;
+        }
+
+        // Parse any remaining recorder output before shutting down watcher/parser state.
+        flushPendingLiveRecordingLines();
+
+        stopLiveRecordingWatcher();
+
+        if (liveRecordingParser != null && liveRecordingTarget != null) {
+            try {
+                Runnable finalizeTask = () -> {
+                    int updates = liveRecordingParser.finalizeDeferredInputs();
+                    liveRecordingTarget.save();
+                    testCaseTable.revalidate();
+                    testCaseTable.repaint();
+                    if (updates > 0) {
+                        logPlaywright("Updated " + updates + " deferred text input step(s).");
+                    }
+                };
+
+                if (SwingUtilities.isEventDispatchThread()) {
+                    finalizeTask.run();
+                } else {
+                    SwingUtilities.invokeAndWait(finalizeTask);
+                }
+            } catch (Exception ex) {
+                Logger
+                    .getLogger(TestCaseComponent.class.getName())
+                    .log(Level.WARNING, "Unable to finalize live recording", ex);
+            }
+        }
+
+        activePlaywrightProcess = null;
+        liveRecordingParser = null;
+        liveRecordingTarget = null;
+        liveRecordingOutputFile = null;
+        recorderReadySignaled = false;
+
+        SwingUtilities.invokeLater(
+            () -> {
+                toolBar.setRecordingState(false);
+                toolBar.enableRecordButton();
+            }
+        );
+    }
+
+    private void startLiveRecordingWatcher() {
+        if (liveRecordingOutputFile == null || liveRecordingParser == null) {
+            return;
+        }
+
+        liveRecordingWatcherThread =
+            new Thread(
+                () -> {
+                    while (!liveRecordingFinalized && !Thread.currentThread().isInterrupted()) {
+                        try {
+                            if (liveRecordingOutputFile.exists()) {
+                                List<String> lines = Files.readAllLines(
+                                    liveRecordingOutputFile.toPath()
+                                );
+                                if (!recorderReadySignaled && lines.size() > 0) {
+                                    onRecorderReady();
+                                }
+                                syncLiveRecording(lines);
+                            }
+                            Thread.sleep(300);
+                        } catch (InterruptedException ex) {
+                            Thread.currentThread().interrupt();
+                            break;
+                        } catch (Exception ex) {
+                            Logger
+                                .getLogger(TestCaseComponent.class.getName())
+                                .log(Level.WARNING, "Live recording watcher iteration failed", ex);
+                        }
+                    }
+                },
+                "playwright-live-recording-watcher"
+            );
+        liveRecordingWatcherThread.setDaemon(true);
+        liveRecordingWatcherThread.start();
+    }
+
+    private void stopLiveRecordingWatcher() {
+        Thread watcher = liveRecordingWatcherThread;
+        if (watcher != null) {
+            watcher.interrupt();
+        }
+        liveRecordingWatcherThread = null;
+    }
+
+    private void flushPendingLiveRecordingLines() {
+        if (liveRecordingOutputFile == null || !liveRecordingOutputFile.exists()) {
+            return;
+        }
+
+        try {
+            List<String> lines = Files.readAllLines(liveRecordingOutputFile.toPath());
+            syncLiveRecording(lines);
+        } catch (Exception ex) {
+            Logger
+                .getLogger(TestCaseComponent.class.getName())
+                .log(Level.WARNING, "Unable to flush pending live recording lines", ex);
+        }
+    }
+
+    private void syncLiveRecording(List<String> lines) {
+        if (liveRecordingParser == null || lines == null) {
+            return;
+        }
+
+        Runnable parserTask = () -> {
+            if (liveRecordingParser != null && liveRecordingTarget != null) {
+                boolean changed = liveRecordingParser.syncFromLines(lines, this::logPlaywright);
+                if (changed) {
+                    liveRecordingTarget.save();
+                    testCaseTable.revalidate();
+                    testCaseTable.repaint();
+                    testDesign.getObjectRepo().refreshWebOR(liveRecordingPageName);
+                }
+            }
+        };
+
+        try {
+            if (SwingUtilities.isEventDispatchThread()) {
+                parserTask.run();
+            } else {
+                SwingUtilities.invokeAndWait(parserTask);
+            }
+        } catch (Exception ex) {
+            Logger
+                .getLogger(TestCaseComponent.class.getName())
+                .log(Level.WARNING, "Unable to sync live recording", ex);
+        }
+    }
+
+    private TestCase resolveRecordingTarget(RecordingTargetDialog.Selection selection) {
+        if (selection == null) {
+            return null;
+        }
+
+        switch (selection.getMode()) {
+            case CURRENT_OPEN_TEST_CASE:
+                return getCurrentTestCase();
+            case NEW_TEST_SCENARIO:
+                return createOrResolveTarget(
+                    selection.getScenarioName(),
+                    selection.getTestCaseName(),
+                    false
+                );
+            case NEW_REUSABLE_SCENARIO:
+                return createOrResolveTarget(
+                    selection.getScenarioName(),
+                    selection.getTestCaseName(),
+                    true
+                );
+            case EXISTING_TEST_CASE:
+                return findExistingTarget(
+                    selection.getExistingScenarioName(),
+                    selection.getTestCaseName(),
+                    selection.isExistingReusable()
+                );
+            default:
+                return null;
+        }
+    }
+
+    private TestCase createOrResolveTarget(
+        String scenarioName,
+        String testCaseName,
+        boolean reusable
+    ) {
+        Scenario scenario = findScenarioByName(scenarioName, reusable);
+        if (scenario == null) {
+            scenario =
+                reusable
+                    ? testDesign.getProject().addReusableScenario(scenarioName)
+                    : testDesign.getProject().addScenario(scenarioName);
+        }
+        if (scenario == null) {
+            return null;
+        }
+
+        TestCase testCase = scenario.getTestCaseByName(testCaseName);
+        if (testCase == null) {
+            testCase = scenario.addTestCase(testCaseName);
+        }
+
+        registerTargetInTree(testCase, reusable);
+        return testCase;
+    }
+
+    /**
+     * Registers a newly created/resolved recording target in the project tree so it becomes
+     * visible immediately without requiring a full project reload.
+     */
+    private void registerTargetInTree(TestCase testCase, boolean reusable) {
+        if (testCase == null) {
+            return;
+        }
+        SwingUtilities.invokeLater(
+            () -> {
+                try {
+                    if (reusable) {
+                        testDesign.getReusableTree().getTreeModel().addTestCase(testCase);
+                    } else {
+                        testDesign.getProjectTree().getTreeModel().addTestCase(testCase);
+                    }
+                } catch (Exception ex) {
+                    Logger
+                        .getLogger(TestCaseComponent.class.getName())
+                        .log(Level.WARNING, "Unable to register recording target in tree", ex);
+                }
+            }
+        );
+    }
+
+    private TestCase findExistingTarget(
+        String scenarioName,
+        String testCaseName,
+        boolean reusable
+    ) {
+        Scenario scenario = findScenarioByName(scenarioName, reusable);
+        return scenario == null ? null : scenario.getTestCaseByName(testCaseName);
+    }
+
+    private Scenario findScenarioByName(String scenarioName, boolean reusable) {
+        List<Scenario> scenarios = reusable
+            ? testDesign.getProject().getReusableScenarios()
+            : testDesign.getProject().getScenarios();
+
+        for (Scenario scenario : scenarios) {
+            if (scenario.getName().equalsIgnoreCase(scenarioName)) {
+                return scenario;
+            }
+        }
+        return null;
+    }
+
+    private int firstEmptyRowIndex(TestCase testCase) {
+        if (testCase == null) {
+            return 0;
+        }
+
+        List<TestStep> steps = testCase.getTestSteps();
+        for (int i = 0; i < steps.size(); i++) {
+            TestStep step = steps.get(i);
+            if (isStepBlank(step)) {
+                return i;
+            }
+        }
+        return steps.size();
+    }
+
+    private boolean isStepBlank(TestStep step) {
+        return (
+            step == null ||
+            (
+                isBlank(step.getObject()) &&
+                isBlank(step.getAction()) &&
+                isBlank(step.getInput()) &&
+                isBlank(step.getCondition()) &&
+                isBlank(step.getReference()) &&
+                isBlank(step.getDescription())
+            )
+        );
+    }
+
+    private boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
+    }
+
+    private File prepareLiveRecordingOutputFile() throws IOException {
+        File recordingDir = new File(
+            sMainFrame.getProject().getLocation() + File.separator + "Recording"
+        );
+        if (!recordingDir.exists()) {
+            recordingDir.mkdirs();
+        }
+        File output = new File(recordingDir, "live_recording_" + INSTANCE_START_TIME + ".java");
+        if (!output.exists()) {
+            output.createNewFile();
+        }
+        return output;
     }
 
     private void stopCellEditing() {
@@ -709,8 +1367,10 @@ public class TestCaseComponent extends JPanel implements ActionListener {
 
     public TestStep insertRowBelow() {
         stopCellEditing();
-        if (testCaseTable.getSelectedRow() != -1
-                && testCaseTable.getSelectedRow() + 1 < testCaseTable.getRowCount()) {
+        if (
+            testCaseTable.getSelectedRow() != -1 &&
+            testCaseTable.getSelectedRow() + 1 < testCaseTable.getRowCount()
+        ) {
             return getCurrentTestCase().addNewStepAt(testCaseTable.getSelectedRow() + 1);
         } else {
             return getCurrentTestCase().addNewStep();
@@ -720,8 +1380,9 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     private void addLastRow() {
         int row = testCaseTable.getSelectedRow();
         int column = testCaseTable.getSelectedColumn();
-        if (row == testCaseTable.getRowCount() - 1
-                && column == testCaseTable.getColumnCount() - 1) {
+        if (
+            row == testCaseTable.getRowCount() - 1 && column == testCaseTable.getColumnCount() - 1
+        ) {
             addRow();
         }
     }
@@ -776,16 +1437,16 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     private void clearValues() {
         stopCellEditing();
         if (testCaseTable.getSelectedRowCount() > 0) {
-            getCurrentTestCase().clearValues(
-                    testCaseTable.getSelectedRows(),
-                    testCaseTable.getSelectedColumns());
+            getCurrentTestCase()
+                .clearValues(testCaseTable.getSelectedRows(), testCaseTable.getSelectedColumns());
         }
     }
 
     private void deleteSelectedRows() {
         stopCellEditing();
         if (testCaseTable.getSelectedRows().length > 0) {
-            getCurrentTestCase().removeSteps(Utils.getReverseSorted(testCaseTable.getSelectedRows()));
+            getCurrentTestCase()
+                .removeSteps(Utils.getReverseSorted(testCaseTable.getSelectedRows()));
         }
     }
 
@@ -829,6 +1490,13 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         }
     }
 
+    private void setHardAssertion(boolean hard) {
+        stopCellEditing();
+        if (testCaseTable.getSelectedRows().length > 0) {
+            getCurrentTestCase().setHardAssertion(testCaseTable.getSelectedRows(), hard);
+        }
+    }
+
     private void openWithSystemEditor() {
         save();
         Utils.openWithSystemEditor(getCurrentTestCase().getLocation());
@@ -837,15 +1505,49 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     private void save() {
         stopCellEditing();
         populateDescription();
-        getCurrentTestCase().save();
+        TestCase current = getCurrentTestCase();
+        clearNewlyRecordedFlags(current);
+        current.save();
+    }
+
+    /**
+     * Repaints the Test Plan and Reusable Component trees so that scenario and
+     * test-case nodes are (re)marked in red whenever their validation state
+     * changes due to an edit or save.
+     */
+    private void refreshTreeValidation() {
+        if (testDesign.getProjectTree() != null) {
+            testDesign.getProjectTree().getTree().repaint();
+        }
+        if (testDesign.getReusableTree() != null) {
+            testDesign.getReusableTree().getTree().repaint();
+        }
+    }
+
+    /**
+     * Clears the transient "newly recorded" highlight so steps captured during live recording
+     * revert to the default colour once the user explicitly saves.
+     */
+    private void clearNewlyRecordedFlags(TestCase testCase) {
+        if (testCase == null) {
+            return;
+        }
+        boolean cleared = false;
+        for (TestStep testStep : testCase.getTestSteps()) {
+            if (testStep.isNewlyRecorded()) {
+                testStep.setNewlyRecorded(false);
+                cleared = true;
+            }
+        }
+        if (cleared) {
+            testCaseTable.repaint();
+        }
     }
 
     private void populateDescription() {
         int i = 0;
         for (TestStep testStep : getCurrentTestCase().getTestSteps()) {
-
-            if (!testStep.getAction().isEmpty()
-                    && testStep.getDescription().isEmpty()) {
+            if (!testStep.getAction().isEmpty() && testStep.getDescription().isEmpty()) {
                 String desc = MethodInfoManager.getDescriptionFor(testStep.getAction());
                 testCaseTable.setValueAt(desc, i, Description.getIndex());
             }
@@ -879,14 +1581,30 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         if (testCaseTable.getSelectedRowCount() > 0) {
             int from = testCaseTable.getSelectedRows()[0];
             int to = testCaseTable.getSelectedRows()[testCaseTable.getSelectedRowCount() - 1];
-            String name = JOptionPane.showInputDialog("Enter the Reusable Name");
-            if (name != null && !name.trim().isEmpty()) {
-                TestCase reusable = getCurrentTestCase().
-                        createAsReusable(name, from, to);
+            TestCase current = getCurrentTestCase();
+            ReusableComponentDialog.Result result = ReusableComponentDialog.prompt(
+                this,
+                current.getProject()
+            );
+            if (result != null) {
+                Scenario targetScenario = current
+                    .getProject()
+                    .getReusableScenarioByName(result.getScenarioName());
+                if (targetScenario == null) {
+                    targetScenario =
+                        current.getProject().addReusableScenario(result.getScenarioName());
+                }
+                TestCase reusable = current.createAsReusable(
+                    targetScenario,
+                    result.getReusableName(),
+                    from,
+                    to
+                );
                 if (reusable != null) {
+                    current.save();
                     testDesign.getReusableTree().getTreeModel().addTestCase(reusable);
                 } else {
-                    Notification.show("Couldn't Create Reusable - " + name);
+                    Notification.show("Couldn't Create Reusable - " + result.getReusableName());
                 }
             }
         }
@@ -948,26 +1666,78 @@ public class TestCaseComponent extends JPanel implements ActionListener {
 
     private void goToSelectedReusable() {
         if (testCaseTable.getSelectedRow() != -1) {
-            TestStep tStep = getCurrentTestCase().getTestSteps().get(testCaseTable.getSelectedRow());
+            TestStep tStep = getCurrentTestCase()
+                .getTestSteps()
+                .get(testCaseTable.getSelectedRow());
+
+            // Go To Reusable is only available for PROJECT and SHARED scope reusables
+            if (!tStep.isReusableStep()) {
+                Notification.showWarning("Selected step is not a reusable step.");
+                return;
+            }
+
             String[] reusableData = tStep.getReusableData();
             if (reusableData != null) {
-                // Try reusable scenarios first, then fall back to regular scenarios
-                Scenario scenario = testDesign.getProject().getReusableScenarioByName(reusableData[0]);
-                if (scenario == null) {
-                    scenario = testDesign.getProject().getScenarioByName(reusableData[0]);
+                ReusableRef ref;
+                try {
+                    ref = tStep.getEffectiveReusableRef();
+                } catch (IllegalArgumentException ex) {
+                    ref =
+                        new ReusableRef(
+                            ReusableRef.Scope.UNSCOPED,
+                            reusableData[0],
+                            reusableData[1]
+                        );
                 }
-                
+                if (ref == null) {
+                    ref =
+                        new ReusableRef(
+                            ReusableRef.Scope.UNSCOPED,
+                            reusableData[0],
+                            reusableData[1]
+                        );
+                }
+
+                // Only allow navigation for PROJECT and SHARED scoped reusables
+                if (ref.getScope() == ReusableRef.Scope.UNSCOPED) {
+                    Notification.showWarning(
+                        "Cannot navigate to unscoped reusable. Please explicitly scope the reference as [Project] or [Shared] in the Action column."
+                    );
+                    return;
+                }
+
+                Scenario scenario = null;
+                if (ref.getScope() == ReusableRef.Scope.PROJECT) {
+                    scenario =
+                        testDesign.getProject().getReusableScenarioByName(ref.getScenarioName());
+                } else if (ref.getScope() == ReusableRef.Scope.SHARED) {
+                    scenario =
+                        testDesign
+                            .getProject()
+                            .getSharedReusableScenarioByName(ref.getScenarioName());
+                }
+
                 if (scenario != null) {
-                    TestCase testCase = scenario.getTestCaseByName(reusableData[1]);
+                    TestCase testCase = scenario.getTestCaseByName(ref.getTestCaseName());
                     if (testCase != null) {
                         testDesign.loadTableModelForSelection(testCase);
                     } else {
-                        Notification.show("TestCase [" + reusableData[1]
-                                + "] not present in the Scenario [" + reusableData[0] + "]");
+                        Notification.show(
+                            "TestCase [" +
+                            ref.getTestCaseName() +
+                            "] not present in the Scenario [" +
+                            ref.getScenarioName() +
+                            "]"
+                        );
                     }
                 } else {
-                    Notification.show("Scenario [" + reusableData[0]
-                            + "] not present in the project");
+                    Notification.show(
+                        "Scenario [" +
+                        ref.getScenarioName() +
+                        "] not present in " +
+                        ref.getScope() +
+                        " reusable scope"
+                    );
                 }
             }
         }
@@ -975,11 +1745,21 @@ public class TestCaseComponent extends JPanel implements ActionListener {
 
     private void goToTestData() {
         if (testCaseTable.getSelectedRow() != -1) {
-            TestStep tStep = getCurrentTestCase().getTestSteps().get(testCaseTable.getSelectedRow());
+            TestStep tStep = getCurrentTestCase()
+                .getTestSteps()
+                .get(testCaseTable.getSelectedRow());
             String[] tdFromInput = tStep.getTestDataFromInput();
             if (tdFromInput != null) {
-                if (!testDesign.getTestDatacomp().navigateToTestData(tdFromInput[0], tdFromInput[1])) {
-                    Notification.show("Test Data [" + tdFromInput[0] + ":" + tdFromInput[1] + "] not found in Test Data");
+                if (
+                    !testDesign.getTestDatacomp().navigateToTestData(tdFromInput[0], tdFromInput[1])
+                ) {
+                    Notification.show(
+                        "Test Data [" +
+                        tdFromInput[0] +
+                        ":" +
+                        tdFromInput[1] +
+                        "] not found in Test Data"
+                    );
                 }
             }
         }
@@ -987,7 +1767,9 @@ public class TestCaseComponent extends JPanel implements ActionListener {
 
     private void goToObject() {
         if (testCaseTable.getSelectedRow() != -1) {
-            TestStep tStep = getCurrentTestCase().getTestSteps().get(testCaseTable.getSelectedRow());
+            TestStep tStep = getCurrentTestCase()
+                .getTestSteps()
+                .get(testCaseTable.getSelectedRow());
             String[] objectPage = tStep.getPageObject();
             if (objectPage != null) {
                 if (!testDesign.getObjectRepo().navigateToObject(objectPage[0], objectPage[1])) {
@@ -1014,7 +1796,6 @@ public class TestCaseComponent extends JPanel implements ActionListener {
     }
 
     class ConsoleDialog extends JDialog {
-
         private final ConsolePanel cPanel;
 
         public ConsoleDialog() {
@@ -1032,7 +1813,7 @@ public class TestCaseComponent extends JPanel implements ActionListener {
         public void showConsole() {
             if (!isVisible()) {
                 pack();
-                setSize(600, 400);
+                setSize(690, 400);
                 setLocationRelativeTo(null);
                 setVisible(true);
             } else {
@@ -1044,6 +1825,17 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             cPanel.start();
         }
 
+        public void clear() {
+            cPanel.clear();
+        }
+
+        public void appendLine(String message) {
+            cPanel.appendLine(message);
+        }
+
+        public void appendErrorLine(String message) {
+            cPanel.appendErrorLine(message);
+        }
     }
 
     class DebugDialog extends JDialog implements ActionListener {
@@ -1059,16 +1851,15 @@ public class TestCaseComponent extends JPanel implements ActionListener {
             toolBar.setFloatable(false);
             JButton drag = new JButton("   ");
 
-            
             toolBar.add(drag);
             registerDrag(drag);
-            
+
             toolBar.add(create("Show Console", "console"));
             toolBar.add(create("Continue Execution", "continue"));
-            toolBar.add(create("Go to Next Step", "stepover")); 
+            toolBar.add(create("Go to Next Step", "stepover"));
             toolBar.add(create("Pause the Execution", "pause"));
             toolBar.add(create("Stop the Execution", "stop"));
-            
+
             add(toolBar);
         }
 
@@ -1115,14 +1906,11 @@ public class TestCaseComponent extends JPanel implements ActionListener {
                 case "Stop the Execution":
                     stopExecution();
                     break;
-
             }
         }
-
     }
 
     class TCHistory extends JMenu implements ActionListener {
-
         private final LinkedList<String> historyList = new LinkedList<>();
 
         private final int max = 20;
@@ -1136,9 +1924,10 @@ public class TestCaseComponent extends JPanel implements ActionListener {
 
         public void log() {
             if (getCurrentTestCase() != null) {
-                String val = getCurrentTestCase().getScenario().getName()
-                        + ":"
-                        + getCurrentTestCase().getName();
+                String val =
+                    getCurrentTestCase().getScenario().getName() +
+                    ":" +
+                    getCurrentTestCase().getName();
                 log(val);
             }
         }
